fixing some layout issues

--- a/src/components/landing.css
+++ b/src/components/landing.css
@@ -1,9 +1,9 @@
 img.magicAnsuzStone {
-	width: 100vw;
+	width: 95%;
 	position: relative;
 	bottom: 3rem;
 }
 
 img.norsePatternGraphic {
-	width: 100%;
+	width: 90%;
 }
